InterScriptParser.py
# Generated from InterScriptParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class InterScriptParser ( Parser ):

    grammarFileName = "InterScriptParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'function'", "'if'", "'else'", 
                     "'for'", "'return'", "'true'", "'false'", "':'", "';'", 
                     "','", "'('", "')'", "'{'", "'}'", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'>'", "'<'", "'=='", "'!='", "'&&'", 
                     "'||'", "'!'" ]

    symbolicNames = [ "<INVALID>", "LET", "FUNCTION", "IF", "ELSE", "FOR", 
                      "RETURN", "TRUE", "FALSE", "COLON", "SEMICOLON", "COMMA", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "ASSIGN", 
                      "PLUS", "MINUS", "STAR", "SLASH", "GT", "LT", "EQ", 
                      "NEQ", "AND", "OR", "NOT", "INT", "STRING", "IDENTIFIER", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_variableDeclaration = 2
    RULE_functionDeclaration = 3
    RULE_parameterList = 4
    RULE_parameter = 5
    RULE_ifStatement = 6
    RULE_forStatement = 7
    RULE_returnStatement = 8
    RULE_expressionStatement = 9
    RULE_expression = 10
    RULE_binaryOp = 11
    RULE_primaryExpr = 12
    RULE_functionCall = 13
    RULE_argumentList = 14
    RULE_literal = 15
    RULE_type = 16

    ruleNames =  [ "program", "statement", "variableDeclaration", "functionDeclaration", 
                   "parameterList", "parameter", "ifStatement", "forStatement", 
                   "returnStatement", "expressionStatement", "expression", 
                   "binaryOp", "primaryExpr", "functionCall", "argumentList", 
                   "literal", "type" ]

    EOF = Token.EOF
    LET=1
    FUNCTION=2
    IF=3
    ELSE=4
    FOR=5
    RETURN=6
    TRUE=7
    FALSE=8
    COLON=9
    SEMICOLON=10
    COMMA=11
    LPAREN=12
    RPAREN=13
    LBRACE=14
    RBRACE=15
    ASSIGN=16
    PLUS=17
    MINUS=18
    STAR=19
    SLASH=20
    GT=21
    LT=22
    EQ=23
    NEQ=24
    AND=25
    OR=26
    NOT=27
    INT=28
    STRING=29
    IDENTIFIER=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(InterScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return InterScriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = InterScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1879052782) != 0):
                self.state = 34
                self.statement()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(InterScriptParser.VariableDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(InterScriptParser.FunctionDeclarationContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(InterScriptParser.IfStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(InterScriptParser.ForStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(InterScriptParser.ReturnStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(InterScriptParser.ExpressionStatementContext,0)


        def getRuleIndex(self):
            return InterScriptParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = InterScriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.variableDeclaration()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.functionDeclaration()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.ifStatement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.forStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 44
                self.returnStatement()
                pass
            elif token in [7, 8, 12, 28, 29, 30]:
                self.enterOuterAlt(localctx, 6)
                self.state = 45
                self.expressionStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(InterScriptParser.LET, 0)

        def IDENTIFIER(self):
            return self.getToken(InterScriptParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(InterScriptParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(InterScriptParser.TypeContext,0)


        def ASSIGN(self):
            return self.getToken(InterScriptParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(InterScriptParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(InterScriptParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return InterScriptParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = InterScriptParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(InterScriptParser.LET)
            self.state = 49
            self.match(InterScriptParser.IDENTIFIER)
            self.state = 50
            self.match(InterScriptParser.COLON)
            self.state = 51
            self.type_()
            self.state = 52
            self.match(InterScriptParser.ASSIGN)
            self.state = 53
            self.expression()
            self.state = 54
            self.match(InterScriptParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(InterScriptParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(InterScriptParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(InterScriptParser.LPAREN, 0)

        def parameterList(self):
            return self.getTypedRuleContext(InterScriptParser.ParameterListContext,0)


        def RPAREN(self):
            return self.getToken(InterScriptParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(InterScriptParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(InterScriptParser.TypeContext,0)


        def LBRACE(self):
            return self.getToken(InterScriptParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(InterScriptParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(InterScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return InterScriptParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = InterScriptParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(InterScriptParser.FUNCTION)
            self.state = 57
            self.match(InterScriptParser.IDENTIFIER)
            self.state = 58
            self.match(InterScriptParser.LPAREN)
            self.state = 59
            self.parameterList()
            self.state = 60
            self.match(InterScriptParser.RPAREN)
            self.state = 61
            self.match(InterScriptParser.COLON)
            self.state = 62
            self.type_()
            self.state = 63
            self.match(InterScriptParser.LBRACE)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1879052782) != 0):
                self.state = 64
                self.statement()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(InterScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterScriptParser.ParameterContext)
            else:
                return self.getTypedRuleContext(InterScriptParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(InterScriptParser.COMMA)
            else:
                return self.getToken(InterScriptParser.COMMA, i)

        def getRuleIndex(self):
            return InterScriptParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = InterScriptParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.parameter()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11:
                    self.state = 73
                    self.match(InterScriptParser.COMMA)
                    self.state = 74
                    self.parameter()
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(InterScriptParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(InterScriptParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(InterScriptParser.TypeContext,0)


        def getRuleIndex(self):
            return InterScriptParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = InterScriptParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(InterScriptParser.IDENTIFIER)
            self.state = 84
            self.match(InterScriptParser.COLON)
            self.state = 85
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(InterScriptParser.IF, 0)

        def LPAREN(self):
            return self.getToken(InterScriptParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(InterScriptParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(InterScriptParser.RPAREN, 0)

        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(InterScriptParser.LBRACE)
            else:
                return self.getToken(InterScriptParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(InterScriptParser.RBRACE)
            else:
                return self.getToken(InterScriptParser.RBRACE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(InterScriptParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(InterScriptParser.ELSE, 0)

        def getRuleIndex(self):
            return InterScriptParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = InterScriptParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(InterScriptParser.IF)
            self.state = 88
            self.match(InterScriptParser.LPAREN)
            self.state = 89
            self.expression()
            self.state = 90
            self.match(InterScriptParser.RPAREN)
            self.state = 91
            self.match(InterScriptParser.LBRACE)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1879052782) != 0):
                self.state = 92
                self.statement()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(InterScriptParser.RBRACE)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 99
                self.match(InterScriptParser.ELSE)
                self.state = 100
                self.match(InterScriptParser.LBRACE)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1879052782) != 0):
                    self.state = 101
                    self.statement()
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 107
                self.match(InterScriptParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(InterScriptParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(InterScriptParser.LPAREN, 0)

        def variableDeclaration(self):
            return self.getTypedRuleContext(InterScriptParser.VariableDeclarationContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterScriptParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(InterScriptParser.ExpressionContext,i)


        def SEMICOLON(self):
            return self.getToken(InterScriptParser.SEMICOLON, 0)

        def RPAREN(self):
            return self.getToken(InterScriptParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(InterScriptParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(InterScriptParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(InterScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return InterScriptParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = InterScriptParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(InterScriptParser.FOR)
            self.state = 111
            self.match(InterScriptParser.LPAREN)
            self.state = 112
            self.variableDeclaration()
            self.state = 113
            self.expression()
            self.state = 114
            self.match(InterScriptParser.SEMICOLON)
            self.state = 115
            self.expression()
            self.state = 116
            self.match(InterScriptParser.RPAREN)
            self.state = 117
            self.match(InterScriptParser.LBRACE)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1879052782) != 0):
                self.state = 118
                self.statement()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(InterScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(InterScriptParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(InterScriptParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(InterScriptParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return InterScriptParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = InterScriptParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(InterScriptParser.RETURN)
            self.state = 127
            self.expression()
            self.state = 128
            self.match(InterScriptParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(InterScriptParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(InterScriptParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return InterScriptParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def expressionStatement(self):

        localctx = InterScriptParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.expression()
            self.state = 131
            self.match(InterScriptParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterScriptParser.PrimaryExprContext)
            else:
                return self.getTypedRuleContext(InterScriptParser.PrimaryExprContext,i)


        def binaryOp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterScriptParser.BinaryOpContext)
            else:
                return self.getTypedRuleContext(InterScriptParser.BinaryOpContext,i)


        def getRuleIndex(self):
            return InterScriptParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = InterScriptParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.primaryExpr()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33423360) != 0):
                self.state = 134
                self.binaryOp()
                self.state = 135
                self.primaryExpr()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinaryOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(InterScriptParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(InterScriptParser.MINUS, 0)

        def STAR(self):
            return self.getToken(InterScriptParser.STAR, 0)

        def SLASH(self):
            return self.getToken(InterScriptParser.SLASH, 0)

        def GT(self):
            return self.getToken(InterScriptParser.GT, 0)

        def LT(self):
            return self.getToken(InterScriptParser.LT, 0)

        def EQ(self):
            return self.getToken(InterScriptParser.EQ, 0)

        def NEQ(self):
            return self.getToken(InterScriptParser.NEQ, 0)

        def getRuleIndex(self):
            return InterScriptParser.RULE_binaryOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryOp" ):
                listener.enterBinaryOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryOp" ):
                listener.exitBinaryOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinaryOp" ):
                return visitor.visitBinaryOp(self)
            else:
                return visitor.visitChildren(self)




    def binaryOp(self):

        localctx = InterScriptParser.BinaryOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_binaryOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 33423360) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(InterScriptParser.IDENTIFIER, 0)

        def literal(self):
            return self.getTypedRuleContext(InterScriptParser.LiteralContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(InterScriptParser.FunctionCallContext,0)


        def LPAREN(self):
            return self.getToken(InterScriptParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(InterScriptParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(InterScriptParser.RPAREN, 0)

        def getRuleIndex(self):
            return InterScriptParser.RULE_primaryExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpr" ):
                listener.enterPrimaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpr" ):
                listener.exitPrimaryExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpr" ):
                return visitor.visitPrimaryExpr(self)
            else:
                return visitor.visitChildren(self)




    def primaryExpr(self):

        localctx = InterScriptParser.PrimaryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_primaryExpr)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.match(InterScriptParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.literal()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.functionCall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 147
                self.match(InterScriptParser.LPAREN)
                self.state = 148
                self.expression()
                self.state = 149
                self.match(InterScriptParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(InterScriptParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(InterScriptParser.LPAREN, 0)

        def argumentList(self):
            return self.getTypedRuleContext(InterScriptParser.ArgumentListContext,0)

